[gd_scene load_steps=8 format=3 uid="uid://ch02hew80dl3"]

[ext_resource type="PackedScene" uid="uid://c6ro7fkydoa7c" path="res://prefabs/enemies/enemy.tscn" id="1_o7iop"]
[ext_resource type="Script" path="res://prefabs/enemies/default_enemy.gd" id="2_qum3b"]
[ext_resource type="Script" path="res://prefabs/enemies/default_enemy_states/idle.gd" id="3_t12mj"]
[ext_resource type="Script" path="res://prefabs/enemies/default_enemy_states/moving.gd" id="4_dlwcm"]
[ext_resource type="Script" path="res://prefabs/enemies/default_enemy_states/prepare.gd" id="5_sc34f"]
[ext_resource type="Script" path="res://prefabs/enemies/default_enemy_states/dash.gd" id="6_j3jle"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6le1m"]
height = 1.0
radius = 3.0

[node name="DefaultEnemy" instance=ExtResource("1_o7iop")]
script = ExtResource("2_qum3b")

[node name="Idle" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("target")]
script = ExtResource("3_t12mj")
target = NodePath("../..")

[node name="Moving" type="Node" parent="StateMachine" index="1" node_paths=PackedStringArray("target")]
script = ExtResource("4_dlwcm")
target = NodePath("../..")

[node name="Prepare" type="Node" parent="StateMachine" index="2" node_paths=PackedStringArray("target")]
script = ExtResource("5_sc34f")
target = NodePath("../..")

[node name="Dash" type="Node" parent="StateMachine" index="3" node_paths=PackedStringArray("target")]
script = ExtResource("6_j3jle")
target = NodePath("../..")

[node name="AttackArea" type="Area3D" parent="." index="7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea" index="0"]
shape = SubResource("CylinderShape3D_6le1m")

[node name="AttackTimer" type="Timer" parent="." index="8"]

[node name="CooldownTimer" type="Timer" parent="." index="9"]
